LPD-68037 test: add API coverage